@@ -92,13 +92,10 @@ int FS_FileInGamedir (const char *fname);
 // Reports the existance of a file with read perms in fs_gamedir or fs_userdir.
 // Returns -1 on failure. Files in pakfiles are NOT meant for this procedure!
 
-size_t FS_OpenFile (const char *filename, FILE **file, unsigned int *path_id,
-							qboolean override_pack);
+size_t FS_OpenFile (const char *filename, FILE **file, unsigned int *path_id);
 // Opens a file (a standalone file or a file in pak) in the hexen2 filesystem,
-// returns fs_filesize on success or (size_t)-1 on failure.  if the game isn't
-// the registered version, it does not search beyond fs_basedir or fs_userdir
-// for standalone files unless override_pack is true.  if path_id is not NULL,
-// it stores the id number of the gamedir in path_id.
+// returns fs_filesize on success or (size_t)-1 on failure.  if path_id is not
+// NULL, it stores the id number of the gamedir in path_id.
 
 // these procedures open a file using FS_OpenFile and loads it into a proper
 // buffer. the buffer is allocated with a total size of fs_filesize + 1. the
